# car-show-edit-creator

./: .gitignore  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
src/car_show_editor/: __main__.py  beats.py  config.py  media.py  project.py  render.py  server.py
src/car_show_editor/static/: app.js  index.html  style.css
tests/: conftest.py  smoke.py  test_end_to_end_timing.py  test_ffmpeg_cmd_shape.py  test_project_model.py  test_render_math.py
